# suika_ovo

./: GravityTDSExample.ino
HiSpark_WiFi_IoT智能开发套件_原理图硬件资料/HiSpark_WiFi_IoT智能开发套件_原理图硬件资料/数据手册/HiSpark_WiFi_IoT_OLED_VER.A/c/: main.c
HiSpark_WiFi_IoT智能开发套件_原理图硬件资料/HiSpark_WiFi_IoT智能开发套件_原理图硬件资料/数据手册/HiSpark_WiFi_IoT_OLED_VER.A/c/SRC/: oledfont.h
code-1.0/.github/: copilot-instructions.md  runhe_pdf.txt  wiring-notes-zh.md
code-1.0/applications/sample/camera/app/: BUILD.gn
code-1.0/applications/sample/camera/app/src/: los_sample.c
code-1.0/applications/sample/camera/communication/: BUILD.gn
code-1.0/applications/sample/camera/communication/hostapd/: BUILD.gn
code-1.0/applications/sample/camera/communication/wpa_cli/: BUILD.gn
code-1.0/applications/sample/camera/communication/wpa_supplicant/: BUILD.gn
code-1.0/applications/sample/camera/example/consumer/: BUILD.gn  client_example.c  default_call_test.c  feature_call_test.c  proc.c
code-1.0/applications/sample/camera/example/intermediary/: BUILD.gn  proc.c
code-1.0/applications/sample/camera/example/provider/: BUILD.gn  feature_example.c  proc.c  service_example.c
code-1.0/applications/sample/camera/hap/: BUILD.gn
code-1.0/applications/sample/camera/media/: camera_sample.cpp
code-1.0/applications/sample/wifi-iot/app/: BUILD.gn
code-1.0/applications/sample/wifi-iot/app/code_v2.0/OLED/: BUILD.gn  oled_demo.c  oled_ssd1306.h
code-1.0/applications/sample/wifi-iot/app/code_v2.0/aht20/: BUILD.gn  aht20_demo.c
code-1.0/applications/sample/wifi-iot/app/code_v2.0/aht_20/: BUILD.gn  aht20_app.c
code-1.0/applications/sample/wifi-iot/app/code_v2.0/chapter_03/: BUILD.gn  hello_world.c
code-1.0/applications/sample/wifi-iot/app/code_v2.0/chapter_04/: BUILD.gn  led.c
code-1.0/applications/sample/wifi-iot/app/code_v2.0/chapter_05/: BUILD.gn  traffic_light_demo.c
code-1.0/applications/sample/wifi-iot/app/code_v2.0/chapter_06/: BUILD.gn  task.c
code-1.0/applications/sample/wifi-iot/app/code_v2.0/chapter_71/: BUILD.gn  hello_world.c
code-1.0/applications/sample/wifi-iot/app/code_v2.0/ems/: BUILD.gn  aht20.c  aht20.h  enrionment_task.c  enrionment_task.h  main.c  oled_fonts.h  oled_task.c  oled_task.h
code-1.0/applications/sample/wifi-iot/app/code_v2.0/ems_mqtt/: BUILD.gn  beeper_task.c  beeper_task.h  main.c  mqtt_util.c  mqtt_util.h  mqtt_utils.c  oled_ssd1306.c  publish_task.c  publish_task.h  wifi_util.c  wifi_util.h  wifi_utils.c  wifi_utils.h
code-1.0/applications/sample/wifi-iot/app/code_v2.0/smart_home_2.0/access_control/: BUILD.gn  access_control_task.c  access_control_task.h  main.c  mqtt_task.c  mqtt_task.h  mqtt_utils.c  oled_task.c  wifi_utils.c  wifi_utils.h
code-1.0/applications/sample/wifi-iot/app/code_v2.0/smart_home_2.0/living_room/: BUILD.gn  living_room_task.c  living_room_task.h  main.c  mqtt_utils.c  oled_task.c  oled_task.h  publish_task.c  wifi_utils.c
code-1.0/applications/sample/wifi-iot/app/code_v2.0/smart_home_2.0/smart_home_platform/: BUILD.gn  beeper_music.c  beeper_music.h  demo.c  mqtt_test.c  mqtt_test.h  oled_ssd1306.c  traffic_light.c  traffic_light.h  wifi_utils.c
code-1.0/applications/sample/wifi-iot/app/code_v2.0/suika_demo/: BUILD.gn  README.md  alarm.c  alarm.h  ds18b20.c  ds18b20.h  i2c_common.c  i2c_common.h  led_control.c  led_control.h  light_sensor.c  light_sensor.h  main.c  mqtt_client.c  mqtt_client.h  oled_display.c  oled_display.h  oled_fonts.h  oled_ssd1306.c  oled_ssd1306.h  pump_control.c  pump_control.h  tank_control.c  tank_control.h  tds_sensor.c  tds_sensor.h  temp_control.c  temp_control.h  turbidity_sensor.c  turbidity_sensor.h  water_level.c  water_level.h  wifi_connect.c  wifi_connect.h
code-1.0/base/global/frameworks/resmgr_lite/src/: global.c  global_utils.c
code-1.0/base/startup/services/bootstrap_lite/source/: system_init.c
code-1.0/docs/contribute/: OpenHarmony-c-coding-style-guide.md  OpenHarmony-cpp-coding-style-guide.md
code-1.0/docs/docs-en/: Readme-EN.md
stm32风扇参考代码/Hardware/: PWM.c
stm32风扇参考代码/User/: main.c
suika-demo001-copilot-update-code-for-harmonyos/: README.md  oh-package-lock.json5  oh-package.json5
suika-demo001-copilot-update-code-for-harmonyos/AppScope/: app.json5
suika-demo001-copilot-update-code-for-harmonyos/AppScope/resources/base/element/: string.json
suika-demo001-copilot-update-code-for-harmonyos/entry/src/main/: module.json5
suika-demo001-copilot-update-code-for-harmonyos/entry/src/main/ets/model/: ResultData.ets
suika-demo001-copilot-update-code-for-harmonyos/entry/src/main/ets/pages/: Index.ets
suika-demo001-copilot-update-code-for-harmonyos/entry/src/main/ets/view/: AIComponent.ets  CellComponent.ets  ControlComponent.ets  EnvComponent.ets  SettingsComponent.ets  StatusComponent.ets  SwiperComponent.ets
suika-demo001-copilot-update-code-for-harmonyos/entry/src/main/ets/viewmodel/: AquaticTankViewModel.ets  EnvironmentViewModel.ets
扩展硬件功能实现编程指南/扩展硬件代码整理/HiSpark_WiFi-IoT_SPC021_Air_Pressure_Sensor/HiSpark_WiFi-IoT_SPC021_Air_Pressure_Sensor/: app_demo_bmp280.c  app_demo_bmp280.h
扩展硬件功能实现编程指南/扩展硬件代码整理/HiSpark_WiFi-IoT_SPC021_Battery_Power_Detection/: app_demo_io_gpio.c
扩展硬件功能实现编程指南/扩展硬件代码整理/HiSpark_WiFi-IoT_SPC021_Car_Control/: car_control.c  car_control.h
扩展硬件功能实现编程指南/扩展硬件代码整理/HiSpark_WiFi-IoT_SPC021_Electronic_Scale/HiSpark_WiFi-IoT_SPC021_Electronic_Scale/: app_demo_hx711.c
扩展硬件功能实现编程指南/扩展硬件代码整理/HiSpark_WiFi-IoT_SPC021_Light_Intensity_Sensor/: light_sensor.c  light_sensor.h
扩展硬件功能实现编程指南/扩展硬件代码整理/HiSpark_WiFi-IoT_SPC021_RTC_Driver/: app_demo_rtc.c  app_demo_rtc.h
扩展硬件功能实现编程指南/扩展硬件代码整理/HiSpark_WiFi-IoT_SPC021_Rotation_Sensor/: app_demo_multi_sample.c  app_demo_rotation_sensor.c
扩展硬件功能实现编程指南/扩展硬件代码整理/HiSpark_WiFi-IoT_SPC021_Water_Sensor/: app_demo_water_sensor.c
(+85 files in other folders)
