# 配置模块名称为：ems
static_library("ems") {

    # 指定模块源码文件
    sources = [
        "main.c",
        "enrionment_task.c","aht20.c",
        "oled_task.c","oled_ssd1306.c",
    ]

    # 指定模块头文件路径
    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
    ]
}
