# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("suikaxxc") 
{
    sources = 
    [
        # Main entry point
        "main.c",
        
        # I2C common utilities
        "i2c_common.c",
        
        # Sensor modules
        "water_level.c",
        "ds18b20.c",
        "tds_sensor.c",
        "turbidity_sensor.c",
        "light_sensor.c",
        
        # Actuator modules
        "pump_control.c",
        "temp_control.c",
        "led_control.c",
        "alarm.c",
        
        # Control logic
        "tank_control.c",
        
        # Display
        "oled_ssd1306.c",
        "oled_display.c",
        
        # Communication
        "wifi_connect.c",
        "mqtt_client.c",
    ]

    include_dirs = 
    [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
        "//third_party/pahomqtt/MQTTPacket/src",
        "//third_party/pahomqtt/MQTTPacket/samples",
        "//vendor/hisi/hi3861/hi3861/include",
    ]
}
