static_library("smart_home_2.0") {
    sources = [
 
        "main.c",
        "access_control_task.c",
        "wifi_utils.c",
        "mqtt_utils.c",
        "mqtt_task.c",
        "oled_ssd1306.c",
        "oled_task.c",
        ]

    include_dirs = [

        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
        "//third_party/pahomqtt/MQTTPacket/src",
        "//third_party/pahomqtt/MQTTPacket/samples",
    ]
}